Add screenshot type: whole map at current zoom level

--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -5273,7 +5273,8 @@ STR_SCREENSHOT_CAPTION                                          :{WHITE}Take a s
 STR_SCREENSHOT_SCREENSHOT                                       :{BLACK}Normal screenshot
 STR_SCREENSHOT_ZOOMIN_SCREENSHOT                                :{BLACK}Fully zoomed in screenshot
 STR_SCREENSHOT_DEFAULTZOOM_SCREENSHOT                           :{BLACK}Default zoom screenshot
-STR_SCREENSHOT_WORLD_SCREENSHOT                                 :{BLACK}Whole map screenshot
+STR_SCREENSHOT_WORLD_SCREENSHOT                                 :{BLACK}Whole map default zoom screenshot
+STR_SCREENSHOT_WORLD_SCREENSHOT_CURRENT_ZOOM                    :{BLACK}Whole map current zoom screenshot
 STR_SCREENSHOT_HEIGHTMAP_SCREENSHOT                             :{BLACK}Heightmap screenshot
 STR_SCREENSHOT_MINIMAP_SCREENSHOT                               :{BLACK}Minimap screenshot
 
