--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -1459,10 +1459,14 @@ STR_CONFIG_SETTING_ROUGHNESS_OF_TERRAIN_ROUGH                   :Rough
 STR_CONFIG_SETTING_ROUGHNESS_OF_TERRAIN_VERY_ROUGH              :Very Rough
 STR_CONFIG_SETTING_VARIETY                                      :Variety distribution: {STRING2}
 STR_CONFIG_SETTING_VARIETY_HELPTEXT                             :(TerraGenesis only) Control whether the map contains both mountainous and flat areas. Since this only makes the map flatter, other settings should be set to mountainous
-STR_CONFIG_SETTING_RIVER_MIN_LENGTH                             :River min length: {STRING2}
+STR_CONFIG_SETTING_RIVER_MIN_LENGTH                             :River min length: {STRING}
 STR_CONFIG_SETTING_RIVER_MIN_LENGTH_HELPTEXT                    :Choose how many short rivers can be before... things... happen
-STR_CONFIG_SETTING_RIVER_ROUTE_RANDOM                           :River route randomness: {STRING2}
+STR_CONFIG_SETTING_RIVER_ROUTE_RANDOM                           :River route randomness: {STRING}
 STR_CONFIG_SETTING_RIVER_ROUTE_RANDOM_HELPTEXT                  :Choose how much randomness...? rivers get? I don't know.
+STR_CONFIG_SETTING_RIVERS_SPRINGS_HIGHER_TILES                  :Rivers require Springs to have higher neighboring tiles:
+STR_CONFIG_SETTING_RIVERS_SPRINGS_HIGHER_TILES_HELPTEXT         :Choose whether rivers require their springs to have neighboring higher tiles.
+STR_CONFIG_SETTING_RIVERS_TOP_OF_HILL                           :Rivers require their Springs to generate at the top of hills:
+STR_CONFIG_SETTING_RIVERS_TOP_OF_HILL_HELPTEXT                  :Choose whether rivers require their springs to generate towards the top of hills.
 STR_CONFIG_SETTING_RIVER_AMOUNT                                 :River amount: {STRING2}
 STR_CONFIG_SETTING_RIVER_AMOUNT_HELPTEXT                        :Choose how many rivers to generate
 STR_CONFIG_SETTING_TREE_PLACER                                  :Tree placer algorithm: {STRING2}
